# galaxybook-linux-control

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: cmake_uninstall.cmake.in
src/: samsung-cli.cpp
